--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/lib/backbone-min.js"></script>
   <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 
+  <script type="text/javascript" src="js/views/menuitemdetails.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
