--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/lib/handlebars.js"></script>
 
+  <script type="text/javascript" src="js/views/menu.js"></script>
   <script type="text/javascript" src="js/views/menuitemdetails.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 
