--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="js/lib/handlebars.js"></script>
 
   <script type="text/javascript" src="js/views/menu.js"></script>
+  <script type="text/javascript" src="js/views/menucategory.js"></script>
   <script type="text/javascript" src="js/views/menuitemdetails.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 
@@ -25,6 +26,7 @@
       <li><a href="#">Food</a></li>
       <li><a href="#/menu-items/new">Add Item</a></li>
       <li><a href="#/menu-items/garden-salad">Garden Salad</a></li>
+      <li><a href="#/categories/sides">Sides</a></li>
     </ul>
   </div>
 
