--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="js/models/menuitem.js"></script>
   <script type="text/javascript" src="js/collections/menuitems.js"></script>
   <script type="text/javascript" src="js/views/menu.js"></script>
+  <script type="text/javascript" src="js/views/orders.js"></script>
   <script type="text/javascript" src="js/views/menucategory.js"></script>
   <script type="text/javascript" src="js/views/menuitemdetails.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
