--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="js/views/menu.js"></script>
   <script type="text/javascript" src="js/views/orders.js"></script>
   <script type="text/javascript" src="js/views/menucategory.js"></script>
+  <script type="text/javascript" src="js/views/menuitemform.js"></script>
   <script type="text/javascript" src="js/views/menuitemdetails.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 
