--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
   <script type="text/javascript" src="js/lib/underscore-min.js"></script>
   <script type="text/javascript" src="js/lib/backbone-min.js"></script>
   <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/lib/handlebars.js"></script>
+  <script type="text/javascript" src="js/lib/handlebars.runtime.js"></script>
 
+  <script type="text/javascript" src="templates/templates.js"></script>
   <script type="text/javascript" src="js/models/menulist.js"></script>
   <script type="text/javascript" src="js/models/menuitem.js"></script>
   <script type="text/javascript" src="js/collections/menuitems.js"></script>
